Closed Bug 1672055 Opened 5 years ago Closed 5 years ago

Mismatch between priorities in nsIRunnable.idl and EventQueue.h

Categories

(Core :: XPCOM, defect)

defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox84 --- fixed

People

(Reporter: bas.schouten, Assigned: bas.schouten)

Details

Attachments

(1 file)

This should be fixed.

Pushed by bschouten@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/84a5f3d3858c Fix mismatch in nsIRunnablePriority and EventQueuePriority. r=smaug
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: