Bug 1672055: Fix mismatch in nsIRunnablePriority and EventQueuePriority. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D94053